# did-btc1-rust

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  deny.toml  mob.md
.cargo/: config.toml
crates/smt-sim/: Cargo.toml  NOTES.md
crates/smt-sim/sql/: smt.sql
crates/smt-sim/src/: main.rs  smt.rs
crates/smt-sim/src/smt/: nih.rs  sqlite.rs  tree.rs
did-btc1/: Cargo.toml
did-btc1-beacons/: Cargo.toml
did-btc1-bitcoin/: Cargo.toml
did-btc1-cli/: Cargo.toml
did-btc1-core/: Cargo.toml
did-btc1-crypto/: Cargo.toml
did-btc1-crypto/src/: cryptosuite.rs  document.rs  document_management.rs  error.rs  key.rs  lib.rs  proof.rs  tests.rs  transformation.rs  verification.rs
did-btc1-crypto/src/did/: key_resolver.rs  mod.rs  verification_method.rs
did-btc1-crypto/src/suites/: bip340_jcs.rs  bip340_rdfc.rs  mod.rs  utils.rs
did-btc1-crypto/src/zcap/: invocation.rs  mod.rs  root_capability.rs
did-btc1-encoding/: Cargo.toml
did-btc1-encoding/src/: lib.rs
did-btc1-examples/: Cargo.toml
did-btc1-identifier/: Cargo.toml
did-btc1-identifier/src/: lib.rs
did-btc1-resolver/: Cargo.toml
did-btc1-resolver/src/: resolver.rs
examples/: read_did.rs
fixtures/: exampleTargetDocument-transactions.json  exampleTargetDocument.json  external-did.txt  external-initialDidDoc.json  external-intermediateDidDoc.json  initialDidDoc-missing-verificationMethod-id.json  initialDidDoc.json  k1q5pa5tq86fzrl0ez32nh8e0ks4tzzkxnnmn8tdvxk04ahzt70u09dag02h0cp-transactions.json  k1qypa5tq86fzrl0ez32nh8e0ks4tzzkxnnmn8tdvxk04ahzt70u09dagl0mgs4-transactions.json
src/: beacon.rs  blockchain.rs  canonical_hash.rs  cryptosuite.rs  document.rs  error.rs  identifier.rs  json_tools.rs  key.rs  lib.rs  resolver.rs  service.rs  transformation.rs  update.rs  verification.rs  zcap.rs
src/cryptosuite/: bip340.rs  bip340_jcs.rs  bip340_rdfc.rs  transformation.rs  utils.rs
src/did/: key_resolver.rs  mod.rs
src/suites/: bip340_jcs.rs  bip340_rdfc.rs  mod.rs  utils.rs
src/zcap/: invocation.rs  mod.rs  proof.rs  root_capability.rs
