[package]
name = "did-btc1"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Implementation of DID:BTC1"


[dependencies]
serde.workspace = true
serde_json.workspace = true
onlyerror.workspace = true
secp256k1.workspace = true
sha2.workspace = true
multibase.workspace = true
serde_jcs.workspace = true
bech32-rust = { path = "../bech32-rust" }
json-patch = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base58 = "0.2"
hex = "0.4.3"
rand = "0.8"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.8"



[workspace]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "git@gl1.dcdpr.com:dcd/did-btc1-rust.git"
authors = ["Dan Pape <dpape@dpape.com>"]

[workspace.dependencies]
# Shared dependencies across all crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
onlyerror = "0.1"
tokio = { version = "1.0", features = ["full"] }

# Cryptography
secp256k1 = { version = "0.30", features = ["serde", "rand"] }
sha2 = "0.10"
multibase = "0.9"

# Bitcoin
bitcoin = "0.32"

# JSON processing
serde_jcs = "0.1"

