[package]
name = "did-btc1"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Implementation of DID:BTC1"
repository = "git@gl1.dcdpr.com:dcd/did-btc1-rust.git"
authors = ["Dan Pape <dpape@dpape.com>", "Jay Oster <jay@blipjoy.com>"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hex = "0.4"
onlyerror = "0.1"
rand = "0.8"

# JSON processing
json-patch = "1"
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1"

# Cryptography
base58 = "0.2"
multibase = "0.9"
secp256k1 = { version = "0.27", features = ["rand"] }
sha2 = "0.10"

# Bitcoin
bech32-rust = { path = "../bech32-rust" }
esploda = "0.2"

[dev-dependencies]
anyhow = "1"
ureq = { version = "3", features = ["json"] }
