[package]
name = "did-btc1-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
onlyerror.workspace = true
secp256k1.workspace = true
sha2.workspace = true
multibase.workspace = true
serde_jcs.workspace = true
did-btc1-identifier.workspace = true
json-patch = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base58 = "0.2"
hex = "0.4.3"
rand = "0.8"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.8"
